--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 faisal
 <h1>I WON A GOLD STAR</h1>
-<img width=500 'https://en.wikipedia.org/wiki/Donkey#/media/File:Donkey_in_Clovelly,_North_Devon,_England.jpg'>
+<img width='500'src="https://en.wikipedia.org/wiki/Donkey#/media/File:Donkey_in_Clovelly,_North_Devon,_England.jpg">
 backround-colour:#f1f1f1;
