--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
           </CSS>
       </head>
      <body>
-       <h1>Under work</h1>
-       
+          <h3 font-family='arial'>How to buy, consumer driven<h3>
+       <p1 font-family='arial'> Guides to major companies, and how to buy effectively, 
+            <br> we'll make sure to inclue specific option that relate to why you are here. So if you are an artist for example, 
+            we would reccomend iPad types and Specs along with the accesories you'll need</p1>
      
+       <img width=300 hight=300 src='https://cdn.macstories.net/img_2287-1621270775533.jpeg'>
