--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
             we would reccomend iPad types and Specs along with the accesories you'll need</p1>
      
        <img width=300 hight=300 src='https://cdn.macstories.net/img_2287-1621270775533.jpeg'>
+           <a href=” ”>
