--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
      <body>
      <h2 style=" font-family:sans-serif"><em>How to buy, consumer driven </em></h2>
        <p font-family='arial'> Guides to major companies, and how to buy effectively, 
-            <br> we'll make sure to inclue specific option that relate to why you are here. So if you are an artist for example, 
-            we would reccomend iPad types and Specs along with the accesories you'll need</p>
+            <br> we'll make sure to inclue specific option that relate to why you are here. So if you are an artist, a regular travellor, a buisnessperson,<strong> this is the place for you</strong></p>
             <br>
        <img width=300 hight=300 src='https://cdn.macstories.net/img_2287-1621270775533.jpeg'>
            <a href=” ”>
