--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
      <head>
        <title>Sight Techhub</title>
           <style> 
+               body {background-color:#FFFFFF}
               p{
                font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
               }
