Update and rename Indexhtml2png to p2.html

--- a/p2.html
+++ b/p2.html
@@ -47,5 +47,6 @@
                <p style='font-family:sans-serif'><em><strong>Duo</strong> ,Duolingo's Mascot Owl and a <br> fun Language Learning Buddy</em></p>
         </section>
        
-
+    </body>
+</html>
       
