--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
             <br> we'll make sure to inclue specific option that relate to why you are here. So if you are an artist, a regular travellor, a buisnessperson,<strong> this is the place for you</strong></p>
             <br>
        <img width=300 hight=300 src='https://cdn.macstories.net/img_2287-1621270775533.jpeg'>
-           <a href=” ”>
+          <a style='font-family:sans-serif href="p2.html"><strong>Artists...Look no further</strong></a>
+                
+                </body>
+          </html>
